<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/deskadjust" />
    <LinearLayout android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="5.0dip" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/icon_size" />
    <Spinner android:id="@id/spinner1" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/icon_layout" />
    <Spinner android:id="@id/spinner_xy" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:gravity="right" android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/button_confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm" />
    </LinearLayout>
    <View android:id="@id/view1" android:background="#ff909090" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_feature" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/feature" />
        <LinearLayout android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="5.0dip" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/feature_hint" />
    </LinearLayout>
    <View android:id="@id/view1" android:background="#ff909090" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:gravity="bottom" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/advice" />
    </LinearLayout>
</LinearLayout>